# bale-backend

./: .env  CLAUDE.md  Cargo.toml  product_requirements_document.md
.sqlx/: query-4599326054df939e2999609d22390ac0c6813d2322745b04aaf38181c45be9a6.json  query-7a8ebd08d5d1121f40a47a72104e522e69e900adf5875403e057f65e8a4fdb9a.json
config/: base.yaml  dev.yml
migrations/: 0001_initial_schema.sql  0003_warehouses_and_basic_setup.sql  0005_products_master.sql  0006_stock_units_and_inventory.sql  0008_partners_management.sql  0010_sales_orders_and_items.sql  0012_job_works_management.sql  0014_goods_dispatch_and_receipt.sql  0016_barcode_system.sql  0017_catalog_configuration.sql
migrations_temp/: 0002_companies_and_users.sql  0003_warehouses_and_basic_setup.sql
scripts/: init_db.sh
src/: app.rs  config.rs  main.rs
src/routes/: companies.rs  healthcheck.rs  mod.rs
tests/api/: companies.rs  healthcheck.rs  main.rs  test_app.rs  utils.rs
