[package]
name = "bale-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
sqlx = { version = "0.8.6", default-features = false, features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = [
	"json",
	"rustls-tls",
	"cookies",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
supabase_rs = "0.4.15"
anyhow = "1.0.99"
thiserror = "2.0.16"
tracing = "0.1.41"
validator = "0.20.0"
tracing-subscriber = "0.3.19"
rand = "0.9.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.7.0"
config = { version = "0.15.15", default-features = false, features = ["yaml"] }
once_cell = "1.21.3"

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
linkify = "0.10.0"
proptest = "1.7.0"
wiremock = "0.6.4"
ctor = "0.5.0"
